--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,14 @@
     "version": "1.3",
     "manifest_version": 2,
     "description": "GroupDocs Viewer plugin for Google Chrome",
+    "icons": {
+		"16": "./img/icon16.png",
+		"48": "./img/icon48.png",
+		"128": "./img/icon128.png" 
+	},
     "browser_action": {
     	"default_title": "GroupDocs Viewer",
-    	"default_icon": "./img/icon.gif",
+    	"default_icon": "./img/icon16.png",
     	"default_popup": "popup.html"
     },
     "permissions": [
